--- a/package.json
+++ b/package.json
@@ -1,42 +1,20 @@
 {
-  "name": "14_tour_travel",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "vite"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@formspree/react": "^2.5.1",
-    "aos": "^2.3.4",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0",
-    "react": "^18.2.0",
-    "react-countup": "^6.5.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.13.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.32",
-    "react-router-dom": "^6.25.0",
-    "tailwindcss": "^3.3.6",
-    "vite": "^5.3.3"
+    "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1"
   }
 }
